# docs/api/apiv3/openapi-spec.yml
@@ -49,7 +49,15 @@ info:
 
     ## Authentication
 
-    The API supports the following authentication schemes: OAuth2, session based authentication, and basic auth.
+    The API supports the following authentication schemes:
+
+    * Session-based authentication
+    * API tokens
+        * passed as Bearer token
+        * passed via Basic auth
+    * OAuth 2.0
+        * using built-in authorization server
+        * using an external authorization server (RFC 9068)
 
     Depending on the settings of the OpenProject instance many resources can be accessed without being authenticated.
     In case the instance requires authentication on all requests the client will receive an **HTTP 401** status code
@@ -57,26 +65,38 @@ info:
 
     Otherwise unauthenticated clients have all the permissions of the anonymous user.
 
-    ### Session-based Authentication
+    ### Session-based authentication
 
     This means you have to login to OpenProject via the Web-Interface to be authenticated in the API.
     This method is well-suited for clients acting within the browser, like the Angular-Client built into OpenProject.
 
     In this case, you always need to pass the HTTP header `X-Requested-With "XMLHttpRequest"` for authentication.
 
-    ### API Key through Basic Auth
+    ### API token as bearer token
 
-    Users can authenticate towards the API v3 using basic auth with the user name `apikey` (NOT your login) and the API key as the password.
-    Users can find their API key on their account page.
+    Users can authenticate towards the API v3 using an API token as a bearer token.
 
-    Example:
+    For example:
 
     ```shell
-    API_KEY=2519132cdf62dcf5a66fd96394672079f9e9cad1
+    API_KEY=opapi-2519132cdf62dcf5a66fd96394672079f9e9cad1
+    curl -H "Authorization: Bearer $API_KEY" https://community.openproject.org/api/v3/users/42
+    ```
+
+    Users can generate API tokens on their account page.
+
+    ### API token through Basic Auth
+
+    API tokens can also be used with basic auth, using the user name `apikey` (NOT your login) and the API token as the password.
+
+    For example:
+
+    ```shell
+    API_KEY=opapi-2519132cdf62dcf5a66fd96394672079f9e9cad1
     curl -u apikey:$API_KEY https://community.openproject.org/api/v3/users/42
     ```
 
-    ### OAuth2.0 authentication
+    ### OAuth 2.0 authentication
 
     OpenProject allows authentication and authorization with OAuth2 with *Authorization code flow*, as well as *Client credentials* operation modes.
 
@@ -91,7 +111,7 @@ info:
 
     - [Client credentials](https://oauth.net/2/grant-types/client-credentials/) - Requires an application to be bound to an impersonating user for non-public access
 
-    ### OIDC provider generated JWT as a Bearer token
+    ### OAuth 2.0 using an external authorization server
 
     There is a possibility to use JSON Web Tokens (JWT) generated by an OIDC provider configured in OpenProject as a bearer token to do authenticated requests against the API.
     The following requirements must be met:
@@ -103,7 +123,7 @@ info:
     - JWT **scope** claim must include a valid scope to access the desired API (e.g. `api_v3` for APIv3)
     - JWT must be actual (neither expired or too early to be used)
     - JWT must be passed in Authorization header like: `Authorization: Bearer {jwt}`
-    - User from **sub** claim must be logged in OpenProject before otherwise it will be not authenticated
+    - User from **sub** claim must be linked to OpenProject before (e.g. by logging in), otherwise it will be not authenticated
 
     In more general terms, OpenProject should be compliant to [RFC 9068](https://www.rfc-editor.org/rfc/rfc9068) when validating access tokens.
 
@@ -246,6 +266,8 @@ paths:
     "$ref": "./paths/help_texts.yml"
   "/api/v3/help_texts/{id}":
     "$ref": "./paths/help_text.yml"
+  "/api/v3/meetings":
+    "$ref": "./paths/meetings.yml"
   "/api/v3/meetings/{id}":
     "$ref": "./paths/meeting.yml"
   "/api/v3/meetings/{id}/attachments":
@@ -569,6 +591,10 @@ components:
       $ref: "./components/examples/hierarchy_item_collection_response.yml"
     HierarchyItemResponse:
       $ref: "./components/examples/hierarchy_item_response.yml"
+    MeetingCollectionSimpleResponse:
+      $ref: "./components/examples/meeting_collection_simple_response.yml"
+    MeetingSimpleResponse:
+      $ref: "./components/examples/meeting_simple_response.yml"
     MembershipCreateRequestCustomMessage:
       $ref: "./components/examples/membership-create-request-custom-message.yml"
     MembershipCreateRequestGlobalRole:
@@ -582,9 +608,9 @@ components:
     MembershipSimpleCollectionResponse:
       $ref: "./components/examples/membership-simple-collection-response.yml"
     MembershipSimpleResponse:
-      $ref: "./components/examples/membership-simple-response.yml"
+      $ref: "./components/examples/membership_simple_response.yml"
     MembershipUpdateAdditionalRoles:
-      $ref: "./components/examples/membership-update-additional-roles.yml"
+      $ref: "./components/examples/membership_update_additional_roles.yml"
     MentionedNotification:
       $ref: "./components/examples/mentioned_notification.yml"
     NotificationCollection:
@@ -729,6 +755,8 @@ components:
       "$ref": "./components/schemas/project_configuration_model.yml"
     CustomActionModel:
       "$ref": "./components/schemas/custom_action_model.yml"
+    CustomCommentProperties:
+      "$ref": "./components/schemas/custom_comment_properties.yml"
     CustomFieldLinkedProperties:
       "$ref": "./components/schemas/custom_field_linked_properties.yml"
     CustomFieldProperties:
@@ -805,6 +833,8 @@ components:
       "$ref": "./components/schemas/list_of_news_model.yml"
     List_workspaces_by_versionModel:
       "$ref": "./components/schemas/list_workspaces_by_version_model.yml"
+    MeetingCollectionModel:
+      "$ref": "./components/schemas/meeting_collection_model.yml"
     MeetingModel:
       "$ref": "./components/schemas/meeting_model.yml"
     MarkdownModel:
